--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: main
+  site_domain: fluffy-bienenstitch-8188e8.netlify.app
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
