--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,8 @@
 backend:
   name: git-gateway
   branch: main
-  site_domain: fluffy-bienenstitch-8188e8.netlify.app
+  identity_url: "https://fluffy-bienenstitch-8188e8.netlify.app/.netlify/identity"
+  gateway_url: "https://fluffy-bienenstitch-8188e8.netlify.app/.netlify/git"
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
