--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,9 @@ backend:
   name: github
   repo: matijasec/qedip
   branch: main
+  base_url: https://fluffy-bienenstitch-8188e8.netlify.app
+  auth_endpoint: auth
+
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
@@ -18,3 +21,4 @@ collections:
       - {label: "Author", name: "author", widget: "string", default: "QED IP"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
+
